# SomeDL

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Download Report 2026-02-20 01:02:23.html  README.md  TODO.md  pyproject.toml
docs/: how_to_install_ffmpeg.md  how_to_install_python.md
docs/images/: webui.md
docs/readthedocs/source/: conf.py  features.rst  index.rst
docs/readthedocs/source/code_documentation/: flask.rst  index.rst
docs/readthedocs/source/installation/: index.rst  installation.rst  requirements.rst
docs/readthedocs/source/usage/: configuration.rst  faq.rst  general_usage.rst  howto.rst  index.rst
src/SomeDL/: main.py  new_somedl_config.toml  yttest.py
src/SomeDL/api/: deezer.py  genius.py  lrclib.py  musicbrainz.py  setlistfm.py  web_requests.py  ytmusic.py
src/SomeDL/core/: OLD_metadata_helper.py  cli_parser.py  download_report.py  downloader.py  extra.py  input_parser.py  metadata.py  metadata_helper.py  processor.py
src/SomeDL/utils/: config.py  console.py  dev_mode.py  logging.py  utils.py  version.py
src/SomeDL/webui/: server.py
src/SomeDL/webui/static/css/: download.css  main.css  setlistfm.css  settings.css  ui.css  ytsearch.css
src/SomeDL/webui/static/js/: download.js  history.js  internal_api.js  main.js  setlistfm.js  settings.js  ytsearch.js
src/SomeDL/webui/templates/: index.html
src/app_name.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: Download Report 2026-03-10 00-53-07.html  Download Report 2026-03-10 01-00-24.html  console.py  dummy_metadata.py  metadata_fetcher_functions_test.py  processor.py  somedl_config.toml
