[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "SomeDL"
version = "1.0.0"
authors = [
    {name="ChemistryGull", email="html.gull@gmail.com"},
]
urls = { "Homepage" = "https://github.com/ChemistryGull/SomeDL" }
description = "A command line tool to download songs from YouTube and adds metadata sourced from different APIs, requiring no API keys or login."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ytmusicapi",
    "mutagen",
    "yt-dlp>=2026.3.3",
    "requests",
    "tomlkit",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]

[project.scripts]
somedl = "SomeDL.main:main"

[tool.setuptools.package-data]
SomeDL = ["new_somedl_config.toml"]
